# oxidgene

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: build-ci-image.yml  ci.yml
apps/oxidgene-cli/: Cargo.toml
apps/oxidgene-cli/src/: main.rs
apps/oxidgene-desktop/: Cargo.toml  build.rs
apps/oxidgene-desktop/src/: main.rs
apps/oxidgene-server/: Cargo.toml
apps/oxidgene-server/src/: config.rs  main.rs
crates/oxidgene-api/: Cargo.toml
crates/oxidgene-api/src/: lib.rs  router.rs
crates/oxidgene-api/src/graphql/: inputs.rs  mod.rs  mutation.rs  query.rs  types.rs
crates/oxidgene-api/src/rest/: cache.rs  citation.rs  dictionary.rs  dto.rs  error.rs  event.rs  family.rs  family_member.rs  gedcom.rs  media.rs  media_link.rs  mod.rs  note.rs  person.rs  person_name.rs  place.rs  snapshot.rs  source.rs  state.rs  tree.rs
crates/oxidgene-api/src/service/: gedcom.rs  mod.rs
crates/oxidgene-api/tests/: graphql_test.rs  rest_test.rs
crates/oxidgene-cache/: Cargo.toml
crates/oxidgene-cache/src/: builder.rs  invalidation.rs  lib.rs  service.rs  store.rs  types.rs
crates/oxidgene-cache/src/store/: disk.rs  memory.rs  redis_store.rs
crates/oxidgene-cache/tests/: service_e6_test.rs
crates/oxidgene-core/: Cargo.toml
crates/oxidgene-core/src/: enums.rs  error.rs  lib.rs  search.rs
crates/oxidgene-core/src/types/: citation.rs  event.rs  family.rs  media.rs  mod.rs  note.rs  pagination.rs  person.rs  place.rs  source.rs  tree.rs
crates/oxidgene-db/: Cargo.toml
crates/oxidgene-db/src/: lib.rs
crates/oxidgene-db/src/entities/: citation.rs  event.rs  event_witness.rs  family.rs  family_child.rs  family_spouse.rs  media.rs  media_link.rs  mod.rs  note.rs  person.rs  person_ancestry.rs  person_name.rs  place.rs  sea_enums.rs  source.rs  tree.rs
crates/oxidgene-db/src/migration/: m20250101_000001_initial.rs  m20250307_000001_add_search_indexes.rs  m20250307_000002_add_sosa_root_person.rs  m20260622_000001_person_edit_modal_fields.rs  m20260702_000001_person_search_fts.rs  mod.rs
crates/oxidgene-db/src/repo/: citation.rs  connection.rs  dictionary.rs  event.rs  event_witness.rs  family.rs  family_child.rs  family_spouse.rs  media.rs  media_link.rs  mod.rs  note.rs  pagination.rs  person.rs  person_ancestry.rs  person_name.rs  person_search.rs  place.rs  source.rs  tree.rs
crates/oxidgene-db/tests/: migration_test.rs  person_search_test.rs  repo_test.rs
crates/oxidgene-gedcom/: Cargo.toml
crates/oxidgene-gedcom/src/: export.rs  import.rs  lib.rs
crates/oxidgene-gedcom/tests/: gedcom_test.rs
crates/oxidgene-ui/: Cargo.toml
crates/oxidgene-ui/assets/: logo_64.b64  portrait_female.b64  portrait_male.b64  portrait_unknown.b64
crates/oxidgene-ui/src/: api.rs  lib.rs  router.rs  utils.rs
crates/oxidgene-ui/src/components/: confirm_dialog.rs  context_menu.rs  layout.rs  mod.rs  pedigree_chart.rs  person_form.rs  person_node.rs  search_person.rs  topbar_search.rs  tree_cache.rs  tree_icon_sidebar.rs  union_form.rs
crates/oxidgene-ui/src/i18n/: en.rs  fr.rs  mod.rs
crates/oxidgene-ui/src/pages/: app_settings.rs  dictionary.rs  home.rs  mod.rs  not_found.rs  person_detail.rs  search_results.rs  settings.rs  tree_detail.rs  tree_list.rs
docker/: Dockerfile.ci  Dockerfile.server  docker-compose.yml
docs/: specifications.md
docs/specifications/: README.md  api.md  architecture.md  caching.md  data-model.md  error-handling.md  genealogy-tree.md  general.md  home.md  i18n.md  index.md  log.md  person-edit-modal.md  roadmap.md  settings.md  ui-add-person.md  ui-app-settings.md  ui-design-tokens.md  ui-dictionary.md  ui-gedcom-import.md  ui-genealogy-tree.md  ui-home.md  ui-merge.md  ui-person-edit-modal-v2.md  ui-person-edit-modal.md  ui-person-profile.md  ui-search-results.md  ui-settings.md  ui-shared-components.md  ui-topbar.md
