[package]
name = "oxidgene-cli"
description = "OxidGene CLI tool (import/export, migrations)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
oxidgene-db = { workspace = true }
oxidgene-gedcom = { workspace = true }
oxidgene-core = { workspace = true }
sea-orm = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
