[package]
name = "oxidgene-cli"
description = "OxidGene CLI tool (import/export, migrations)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
# Stub binary for Sprint G — deps will be re-added when implemented.
