[package]
name = "oxidgene-desktop"
description = "OxidGene desktop application (Axum + SQLite + Dioxus WebView)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
oxidgene-api = { workspace = true }
oxidgene-db = { workspace = true }
dioxus = { workspace = true, features = ["desktop"] }
axum = { workspace = true }
tokio = { workspace = true }
sea-orm = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
