[package]
name = "oxidgene-desktop"
description = "OxidGene desktop application (Axum + SQLite + Dioxus WebView)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# Embed the .ico as a Windows resource (IDI_APPLICATION / 32512) so that
# Explorer shows the OxidGene icon and Dioxus's default_icon() picks it up.
[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dependencies]
oxidgene-api = { workspace = true }
oxidgene-db = { workspace = true }
oxidgene-cache = { workspace = true, features = ["disk"] }
oxidgene-ui = { workspace = true }
dioxus = { workspace = true, features = ["desktop", "router"] }
axum = { workspace = true }
tokio = { workspace = true, features = ["net", "signal", "sync"] }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
