[package]
name = "oxidgene-api"
description = "OxidGene REST and GraphQL API layer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
oxidgene-core = { workspace = true }
oxidgene-db = { workspace = true }
oxidgene-gedcom = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
