[package]
name = "oxidgene-api"
description = "OxidGene REST and GraphQL API layer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = []
redis = ["oxidgene-cache/redis"]
postgres = ["oxidgene-db/postgres"]
# GraphQL endpoint — opt in for the server binary; desktop skips async-graphql entirely.
graphql = ["dep:async-graphql", "dep:async-graphql-axum"]

[dependencies]
oxidgene-core = { workspace = true }
oxidgene-db = { workspace = true }
oxidgene-cache = { workspace = true }
oxidgene-gedcom = { workspace = true }
axum = { workspace = true }
async-graphql = { workspace = true, optional = true }
async-graphql-axum = { workspace = true, optional = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tower = { workspace = true }
http-body-util = "0.1"
