[package]
name = "oxidgene-db"
description = "OxidGene database entities, migrations, and repository layer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
oxidgene-core = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"
