[package]
name = "oxidgene-db"
description = "OxidGene database entities, migrations, and repository layer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = []
# Enable the PostgreSQL driver — opt in for the server binary; desktop uses SQLite only.
postgres = [
    "sea-orm/sqlx-postgres",
    "sea-orm-migration/sqlx-postgres",
]

[dependencies]
oxidgene-core = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
tokio = { workspace = true }
