[package]
name = "oxidgene-ui"
description = "OxidGene Dioxus frontend components (shared web/desktop)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
oxidgene-core = { workspace = true }
dioxus = { workspace = true, features = ["router"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
